force-app/main/default/objects/Account/fields/ECT_State_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>ECT_State_Abbreviation__c</fullName>
    <label>State Abbreviation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>