force-app/main/default/objects/Account/fields/ECT_State_Seal__c.field-meta.xml
<CustomField>
    <fullName>ECT_State_Seal__c</fullName>
    <label>State Seal</label>
    <type>Url</type>
</CustomField>