force-app/main/default/objects/Account/fields/ETMS_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>ETMS_Affiliation__c</fullName>
    <description>Affiliations the Customer belongs to</description>
    <label>Affiliation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>