force-app/main/default/objects/Account/fields/ETMS_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>ETMS_Customer_Category__c</fullName>
    <description>Captures the Customer Category for a controlled action</description>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White House</fullName>
            </value>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Other Federal Agency</fullName>
            </value>
            <value>
                <fullName>State or Local Government</fullName>
            </value>
            <value>
                <fullName>General Public/Private Citizen (direct/non-referral)</fullName>
            </value>
            <value>
                <fullName>Stakeholder Groups</fullName>
            </value>
            <value>
                <fullName>Private Sector/Industry</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>