force-app/main/default/objects/Account/fields/ETMS_Customer_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>ETMS_Customer_Sub_Category__c</fullName>
    <description>Captures the Customer Sub-Category for a controlled action</description>
    <label>Customer Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ETMS_Customer_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POTUS</fullName>
            </value>
            <value>
                <fullName>VPOTUS</fullName>
            </value>
            <value>
                <fullName>Executive Office of the President (EOP)</fullName>
            </value>
            <value>
                <fullName>National Security Council (NSC)</fullName>
            </value>
            <value>
                <fullName>Office of Management and Budget (OMB)</fullName>
            </value>
            <value>
                <fullName>Citizen Referral (Agency Liaison)</fullName>
            </value>
            <value>
                <fullName>Member of Congress (oversight committee)</fullName>
            </value>
            <value>
                <fullName>Member of Congress (non-oversight)</fullName>
            </value>
            <value>
                <fullName>Congressional Staff</fullName>
            </value>
            <value>
                <fullName>Government Accountability Office (GAO)</fullName>
            </value>
            <value>
                <fullName>Constituent Referral</fullName>
            </value>
            <value>
                <fullName>Library of Congress</fullName>
            </value>
            <value>
                <fullName>Central Intelligence Agency (CIA)</fullName>
            </value>
            <value>
                <fullName>Commission on Civil Rights</fullName>
            </value>
            <value>
                <fullName>Department of Agriculture (USDA)</fullName>
            </value>
            <value>
                <fullName>Department of Commerce (DOC)</fullName>
            </value>
            <value>
                <fullName>Department of Defense (DoD)</fullName>
            </value>
            <value>
                <fullName>Department of Education (ED)</fullName>
            </value>
            <value>
                <fullName>Department of Energy (DOE)</fullName>
            </value>
            <value>
                <fullName>Department of Health and Human Services (HHS)</fullName>
            </value>
            <value>
                <fullName>Department of Homeland Security (DHS)</fullName>
            </value>
            <value>
                <fullName>Department of Housing and Urban Development (HUD)</fullName>
            </value>
            <value>
                <fullName>Department of Justice (DOJ)</fullName>
            </value>
            <value>
                <fullName>Department of Labor (DOL)</fullName>
            </value>
            <value>
                <fullName>Department of State (DOS)</fullName>
            </value>
            <value>
                <fullName>Department of the Interior (DOI)</fullName>
            </value>
            <value>
                <fullName>Department of the Treasury (TREAS)</fullName>
            </value>
            <value>
                <fullName>Department of Transportation (DOT)</fullName>
            </value>
            <value>
                <fullName>Department of Veterans Affairs (VA)</fullName>
            </value>
            <value>
                <fullName>Equal Employment Opportunity Commission (EEOC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>