force-app/main/default/objects/Account/fields/ETMS_Email__c.field-meta.xml
<CustomField>
    <fullName>ETMS_Email__c</fullName>
    <description>Customer email associated with Controlled Action request</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>