force-app/main/default/objects/Account/fields/ETMS_Salutation__c.field-meta.xml
<CustomField>
    <fullName>ETMS_Salutation__c</fullName>
    <description>Customer salutation</description>
    <label>Salutation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>