force-app/main/default/objects/Account/fields/Record_Retention__c.field-meta.xml
<CustomField>
    <fullName>Record_Retention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Retention</label>
    <referenceTo>GC_Record_Retention__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>