force-app/main/default/objects/Account/recordTypes/ECT_Account.recordType-meta.xml
<RecordType>
    <fullName>ECT_Account</fullName>
    <active>true</active>
    <description>Account to hold state information for the Electoral College</description>
    <label>ECT Account</label>
</RecordType>