force-app/main/default/objects/Account/recordTypes/ETMS_Customer.recordType-meta.xml
<RecordType>
    <fullName>ETMS_Customer</fullName>
    <active>true</active>
    <description>Controlled Action requester</description>
    <label>ETMS Customer</label>
</RecordType>