force-app/main/default/objects/Account/recordTypes/Facility.recordType-meta.xml
<RecordType>
    <fullName>Facility</fullName>
    <active>true</active>
    <description>Contains NARA Archive Information.</description>
    <label>Facility</label>
</RecordType>