force-app/main/default/objects/Account/recordTypes/OGIS_Account.recordType-meta.xml
<RecordType>
    <fullName>OGIS_Account</fullName>
    <active>true</active>
    <label>OGIS Account</label>
</RecordType>