force-app/main/default/objects/Account/recordTypes/Researcher_Account.recordType-meta.xml
<RecordType>
    <fullName>Researcher_Account</fullName>
    <active>true</active>
    <label>Researcher Account</label>
</RecordType>