force-app/main/default/objects/Account/listViews/ECT_All_Accounts.listView-meta.xml
<ListView>
    <fullName>ECT_All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ECT_State_Abbreviation__c</columns>
    <columns>ECT_State_Seal__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.ECT_Account</value>
    </filters>
    <label>All ECT Accounts</label>
    <sharedTo>
        <group>ECT_Users</group>
    </sharedTo>
</ListView>