force-app/main/default/objects/Account/listViews/NARA.listView-meta.xml
<ListView>
    <fullName>NARA</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Facility</value>
    </filters>
    <label>Facility</label>
</ListView>